# Light-Frame-WIP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assets.cmake  vendor.cmake
Data/Shaders/: finalImage.frag  finalImage.vert  font2d.vert  grid.vert  imgui.frag  imgui.vert  main.frag  main.vert  triangle.vert
Engine/: CMakeLists.txt  LightFrameEngine.hpp  LightFrameScript.hpp
Engine/Core/: ArrayProxy.hpp  BufferResource.hpp  EntryPoint.hpp  Thread.hpp
Engine/Editor/: Editor.cpp  Editor.hpp  EditorCamera.hpp  Viewport.cpp  Viewport.hpp
Engine/Renderer/: Camera.hpp  Font.hpp  Grid.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
Engine/Renderer/Vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  Surface.cpp
Engine/Scene/: Mesh.hpp  MeshComponent.hpp  MeshLoader.cpp  MeshLoader.hpp  Model.hpp  ModelComponent.hpp
Runtime/: CMakeLists.txt  Engine.cpp  Engine.hpp  MainScript.cpp  MainScript.hpp
engine/: CMakeLists.txt
engine/core/: ArrayProxy.hpp  Camera.hpp  Thread.hpp  Types.hpp
engine/renderer/: Font.cpp  ImguiRenderer.cpp  ImguiRenderer.hpp  Renderer.cpp  Renderer.hpp  TextRenderer.hpp  Window.cpp  Window.hpp  oldRenderer.cpp  oldRenderer.hpp
engine/renderer/vulkan/: Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  Surface.cpp  Surface.hpp  VulkanEnums.hpp
engine/scene/: Scene.hpp
runtime/: Engine.cpp  Engine.hpp  EntryPoint.cpp
shaders/: font2d.frag  grid.frag  imgui.frag  imgui.vert  main.frag  main.vert  triangle.frag
